# xml-paths

./: Cargo.toml  LICENSE  README.md
example_data/: notes.xml
src/: lib.rs  main.rs  xpath.rs
